# kde-container-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
assets/: Dockerfile  Dockerfile_normal  Dockerfile_nvidia
src/: cli.rs  common_errors.rs  constants.rs  helpers.rs  main.rs
src/containers/: common.rs  configs.rs  docker.rs  mod.rs  podman.rs
