[package]
name = "kde_container_cli"
version = "0.1.1"
edition = "2018"
authors = ["Ayush Singh <ayushsingh1325@gmail.com>"]
license-file = "LICENSE.txt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
users = "0.11.0"

[profile.release]
lto = true
codegen-units = 1

